<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About_TC_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout

            android:background="@color/helpbtn_color"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/Abouttcback_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/ic_baseline_arrow_back_24" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t_c"
                android:textColor="@color/helpTitle_color"
                android:paddingTop="3dp"
                android:layout_centerInParent="true"
                android:textStyle="bold"
                android:textSize="19sp"/>




        </RelativeLayout>
        <androidx.cardview.widget.CardView
            android:layout_margin="2dp"
            app:cardElevation="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/about_tctext"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/about_tctext1"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/about_tctext2"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />


                </LinearLayout>




            </ScrollView>




        </androidx.cardview.widget.CardView>



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>