<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin.Admin_Home_Activity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

       <RelativeLayout
           android:layout_marginTop="9dp"
           android:layout_width="match_parent"
           android:layout_height="60dp">

           <TextView
               android:layout_marginTop="5dp"
               android:textStyle="bold"
               android:textColor="@color/admin_logout_color"
               android:gravity="center"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textSize="28sp"
               android:text="@string/welcome_back_adminHome"/>


       </RelativeLayout>
       <RelativeLayout
           android:id="@+id/employ_list_button"
           android:layout_margin="8dp"
           android:layout_width="match_parent"
           android:layout_height="55dp">

           <androidx.cardview.widget.CardView
               app:cardBackgroundColor="@color/notification_Abar_color"
               app:cardElevation="9dp"
               android:layout_width="match_parent"
               android:layout_height="match_parent">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="center"
                   android:textColor="@color/white"
                   android:textStyle="bold"
                   android:textSize="20sp"
                   android:text="@string/employee_list_admintxt"/>


           </androidx.cardview.widget.CardView>


       </RelativeLayout>
       <RelativeLayout
           android:id="@+id/all_employattendBtn"
           android:layout_margin="8dp"
           android:layout_width="match_parent"
           android:layout_height="55dp">

           <androidx.cardview.widget.CardView
               app:cardBackgroundColor="@color/notification_Abar_color"
               app:cardElevation="9dp"
               android:layout_width="match_parent"
               android:layout_height="match_parent">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="center"
                   android:textColor="@color/white"
                   android:textStyle="bold"
                   android:textSize="20sp"
                   android:text="Attendance Report"/>


           </androidx.cardview.widget.CardView>


       </RelativeLayout>
       <RelativeLayout
           android:id="@+id/Admin_eAttendanceBtn"
           android:layout_margin="8dp"
           android:layout_width="match_parent"
           android:layout_height="55dp">

           <androidx.cardview.widget.CardView
               app:cardBackgroundColor="@color/notification_Abar_color"
               app:cardElevation="9dp"
               android:layout_width="match_parent"
               android:layout_height="match_parent">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="center"
                   android:textColor="@color/white"
                   android:textStyle="bold"
                   android:textSize="20sp"
                   android:text="@string/mark_attendance_admintxt"/>


           </androidx.cardview.widget.CardView>


       </RelativeLayout>

       <RelativeLayout
           android:id="@+id/Admin_allnotificBtn"
           android:layout_margin="8dp"
           android:layout_width="match_parent"
           android:layout_height="55dp">

           <androidx.cardview.widget.CardView
               app:cardBackgroundColor="@color/notification_Abar_color"
               app:cardElevation="9dp"
               android:layout_width="match_parent"
               android:layout_height="match_parent">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="center"
                   android:textColor="@color/white"
                   android:textStyle="bold"
                   android:textSize="20sp"
                   android:text="Send Notification"/>


           </androidx.cardview.widget.CardView>


       </RelativeLayout>

       <RelativeLayout
           android:id="@+id/admin_logout_button"
           android:layout_marginTop="270dp"
           android:layout_marginLeft="8dp"
           android:layout_marginRight="8dp"
           android:background="@drawable/admin_logout_btndesign"
           android:layout_width="match_parent"
           android:layout_height="55dp">

           <androidx.cardview.widget.CardView

               app:cardElevation="9dp"
               android:layout_margin="4dp"
               android:layout_width="match_parent"
               android:layout_height="match_parent">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="center"
                   android:textColor="@color/admin_logout_color"
                   android:textStyle="bold"
                   android:textSize="25sp"
                   android:text="@string/logout_btn_txt"/>


           </androidx.cardview.widget.CardView>


       </RelativeLayout>







   </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>